项目名称修改

--- a/data/dx/index.html
+++ b/data/dx/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta content="IE=edge" http-equiv="X-UA-Compatible">
     <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
-    <title>LDQ</title>
+    <title>易财钱包</title>
     <style>
         html, body, .mask, .container {
             width: 100vw;
@@ -140,7 +140,7 @@
     <img src="img/logo.png" class="logo">
     <div class="title mid">
         <img src="img/icon-ios.png" class="platform">
-        <span class="app-name">LDQ</span>
+        <span class="app-name">易财钱包</span>
         <span class="version">企业版</span>
     </div>
     <div class="download-btn">下载安装</div>
