--- a/data/dx/index.html
+++ b/data/dx/index.html
@@ -230,7 +230,7 @@
     }else{
         platformImg.src = 'img/icon-android.png';
         platformImg.style.height = '4vw';
-        downloadLink = 'https://market-oss.oss-cn-hangzhou.aliyuncs.com/app/android/ycqb.apk';
+        downloadLink = 'https://ycqb.oss-cn-hangzhou.aliyuncs.com/app/android/ycqb.apk';
     }
 
     download.addEventListener('click', function () {
