--- a/data/dx/index.html
+++ b/data/dx/index.html
@@ -226,7 +226,7 @@
 
     if (isIos) {
         browser.innerHTML = 'safari';
-        downloadLink = 'itms-services://?action=download-manifest&url=https://ycqb.oss-cn-hangzhou.aliyuncs.com/app/ios/ycqb.plist';
+        downloadLink = 'itms-services://?action=download-manifest&url=https://ycqb.oss-cn-hangzhou.aliyuncs.com/app/ios/ycqb.ipa';
     }else{
         platformImg.src = 'img/icon-android.png';
         platformImg.style.height = '4vw';
