多次下载问题

--- a/data/dx/index.html
+++ b/data/dx/index.html
@@ -248,7 +248,7 @@
                     console.log(resp);
                 }
             });
-        location.href = downloadLink;
+       // location.href = downloadLink;
 
 
     });
